test/conformance/chainsaw/cel-policy-exceptions/empty-policy-ref/exception.yaml
apiVersion: kyverno.io/v2alpha1
kind: CELPolicyException
metadata:
  name: pod-security-exception
  namespace: delta
spec:
  matchConstraints:
    resourceRules:
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
  matchConditions:
    - name: "check-namespace"
      expression: "object.metadata.namespace == 'test-ns'"
